Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6080

Posix copytool should unregister FIFO on signal

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.7.0
    • None
    • None
    • All
    • 3
    • 16918

      Original text/report from J.Nemeth (SGI) :

      If the ct_run() routine (copytool daemon) terminates normally, it calls llapi_hsm_unregister_event_fifo() as well as llapi_hsm_copytool_unregister(). If the daemon is terminated via signal, the signal handler calls llapi_hsm_copytool_unregister(), but does NOT call llapi_hsm_unregister_event_fifo().
      
      This leaves the FIFO file in place, and any subsequent invocation of the copytool with -f and the same FIFO path will fail to open the FIFO file with an EEXIST error.
      
      The signal() handler routine should call llapi_hsm_unregister_event_fifo() the same way that ct_run() does on normal termination.
      

            bfaccini Bruno Faccini (Inactive)
            bfaccini Bruno Faccini (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: