LU-6080 utils: copytool to also unregister FIFO upon signal

Copytool should also call llapi_hsm_unregister_event_fifo() upon
termination signal handling, to close FIFO and also unlink it if
transient.

Signed-off-by: Bruno Faccini <bruno.faccini@intel.com>
Change-Id: I61add8719004a3126aee82accb0bf1267d8eb612
Reviewed-on: http://review.whamcloud.com/13236
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Henri Doreau <henri.doreau@cea.fr>
Reviewed-by: jacques-Charles Lafoucriere <jacques-charles.lafoucriere@cea.fr>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>